export class Device {
  constructor(public deviceId: string) {
  }
}
